fix dark mode

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -78,6 +78,7 @@ h1 {
   font-size: 25px;
   box-shadow: 0 0 10px black;
   transition: 0.2s all;
+  cursor: pointer;
 }
 
 #dark .input__sumbit {
@@ -172,49 +173,4 @@ h1 {
   .todo__single {
     width: 80%;
   }
-}
-
-@media (prefers-color-scheme: dark) {
-
-  * {
-  background: rgb(0, 0, 0);
-  }
-  
-  h1 {
-  color: white;
-}
-  
-  
- .theme__switch {
-  color: white;
-}
-  
- .input__sumbit:hover {
-  box-shadow: 0 0 5px black;
-  background-color: rgb(117, 180, 244);
-}
-  
-   .todo__single {
-  background-color: rgb(39, 39, 39);
-}
-  
-   .todo__single--important {
-  background: rgba(145, 0, 0, 0.55);
-}
-  
- .todo__single--text {
-  color: white;
-}
-  
-.todo__single--done {
-  color: rgb(11, 111, 11);
-} 
-  
-.icon {
-  color: white;
-}
-
-.icon:hover {
-  color: rgb(117, 180, 244);
-}
 }
